# Data-validation-module

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-db2.txt  requirements-from-github.txt  test_local.py
datavalidation/: __init__.py  client.py  config.py  results.py
datavalidation/connectors/: __init__.py  azure_sql.py  base.py  db2.py  db2_jdbc.py
datavalidation/dialects/: __init__.py  azure_sql.py  base.py  db2.py
datavalidation/drivers/: README.md  __init__.py
datavalidation/reporting/: __init__.py  cross_schema.py  index_comparison.py  unified_spec.py
datavalidation/rules/: __init__.py  datatype_map.py  defaults.py  engine.py
datavalidation/utils/: __init__.py  comparison.py  formatting.py
datavalidation/validators/: __init__.py  base.py  behavior.py  data.py  schema.py
docs/: DB2_SETUP.md  HIGH_LEVEL_DESIGN.md  LEGACY_MAPPING.md  LIBRARY_ARCHITECTURE.md  reporting_legacy_port.md
docs/validations/: INDEX.md  README.md
docs/validations/behavior/: README.md  collation_encoding.md  extended_properties.md  identity_collision_check.md  identity_sequence.md  routines.md  triggers.md
docs/validations/data/: README.md  checksum_hash.md  column_null_check.md  constraint_integrity.md  distinct_key_check.md  reference_integrity.md  row_count.md
docs/validations/schema/: README.md  check_constraints.md  datatype_mapping.md  default_values.md  foreign_keys.md  indexes.md  nullable_constraints.md  presence.md  table_column_count.md
examples/: COMPARISON_SUMMARY.md  env.example  minimal.py  quickstart.py
tests/: __init__.py  test_data_validation_unit.py  test_validation_phases.py
